// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en PrimeraApp Debe mostrar PrimeraApp 1`] = `
<Fragment>
  <h1>
    Hola, soy goku
  </h1>
  <p>
    Soy un subtitulo
  </p>
</Fragment>
`;

exports[`Pruebas en PrimeraApp Debe mostrar subtitulo enviado por props 1`] = `
<Fragment>
  <h1>
    Hola, soy goku
  </h1>
  <p>
    soy un subtitulo
  </p>
</Fragment>
`;
